RESOLVED FIXED185734
CRASH in ImageDecoderAVFObjC::sampleAtIndex()
https://bugs.webkit.org/show_bug.cgi?id=185734
Summary CRASH in ImageDecoderAVFObjC::sampleAtIndex()
Jer Noble
Reported 2018-05-17 10:18:03 PDT
CRASH in ImageDecoderAVFObjC::sampleAtIndex()
Attachments
Patch (7.59 KB, patch)
2018-05-17 10:58 PDT, Jer Noble
no flags
Patch for landing (7.57 KB, patch)
2018-05-17 12:06 PDT, Jer Noble
no flags
Patch for landing (7.56 KB, patch)
2018-05-17 13:23 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-05-17 10:56:51 PDT
Jer Noble
Comment 2 2018-05-17 10:58:23 PDT
Eric Carlson
Comment 3 2018-05-17 11:48:29 PDT
Comment on attachment 340603 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=340603&action=review > LayoutTests/fast/images/animated-image-mp4-crash.html:8 > + var imageData; Nit: "var" here "let" below, should be consistent. > LayoutTests/fast/images/animated-image-mp4-crash.html:12 > + let image = document.querySelector('img'); Nit: could use const here instead of let.
Jer Noble
Comment 4 2018-05-17 12:06:00 PDT
Created attachment 340620 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-05-17 12:21:04 PDT
Comment on attachment 340620 [details] Patch for landing Rejecting attachment 340620 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 340620, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/7713202
Jer Noble
Comment 6 2018-05-17 13:23:03 PDT
Created attachment 340630 [details] Patch for landing
WebKit Commit Bot
Comment 7 2018-05-17 14:02:29 PDT
Comment on attachment 340630 [details] Patch for landing Clearing flags on attachment: 340630 Committed r231920: <https://trac.webkit.org/changeset/231920>
WebKit Commit Bot
Comment 8 2018-05-17 14:02:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.