CRASH in ImageDecoderAVFObjC::sampleAtIndex() https://bugs.webkit.org/show_bug.cgi?id=185734 <rdar://problem/40295094>

Reviewed by Eric Carlson.

Source/WebCore:

Test: fast/images/animated-image-mp4-crash.html

Test the correct size value before iterating over the SampleMap in presentationOrder()

* Modules/mediasource/SampleMap.h:
(WebCore::PresentationOrderSampleMap::size const):
* platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
(WebCore::ImageDecoderAVFObjC::sampleAtIndex const):

LayoutTests:

* fast/images/animated-image-mp4-crash-expected.txt: Added.
* fast/images/animated-image-mp4-crash.html: Added.
* fast/images/resources/two-samples-with-same-pts.mp4: Added.


Canonical link: https://commits.webkit.org/201207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231920 268f45cc-cd09-0410-ab3c-d52691b4dbfc